force-app/main/default/objects/NMC_Account__c/NMC_Account__c.object-meta.xml
<CustomObject>
    <label>NMC Account</label>
    <nameField>
        <label>NMC Account Name / Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NMC Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>