force-app/main/default/objects/NMC_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NMC Accounts</relationshipLabel>
    <relationshipName>NMC_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>