force-app/main/default/objects/NMC_Account__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <description>Auto Number is created for Outage Contact Wizard as a solution for Apex Governor Limit.</description>
    <displayFormat>{000000}</displayFormat>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>