force-app/main/default/objects/NMC_Account__c/fields/Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Reason__c</fullName>
    <description>Change reason for TIBCO integrations.</description>
    <formula>&quot;Update&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Reason</label>
    <type>Text</type>
</CustomField>