force-app/main/default/objects/NMC_Account__c/fields/Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_ID__c</fullName>
    <formula>Account__r.QWBS_Cust_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cust ID</label>
    <type>Text</type>
</CustomField>