force-app/main/default/objects/NMC_Account__c/fields/Customer_Interface__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interface__c</fullName>
    <label>Customer Interface #</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>