force-app/main/default/objects/NMC_Account__c/fields/Default_NMC_Account_for_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_NMC_Account_for_Unit_Type__c</fullName>
    <label>Default NMC Account for Unit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not a Default NMC Account</fullName>
            </value>
            <value>
                <fullName>OmniExpress</fullName>
            </value>
            <value>
                <fullName>OmniExpress2</fullName>
            </value>
            <value>
                <fullName>OmniTRACS</fullName>
            </value>
            <value>
                <fullName>MCP100S</fullName>
            </value>
            <value>
                <fullName>MCP100T</fullName>
            </value>
            <value>
                <fullName>MCP110</fullName>
            </value>
            <value>
                <fullName>MCP200</fullName>
            </value>
            <value>
                <fullName>MCP50</fullName>
            </value>
            <value>
                <fullName>TrailerTRACS</fullName>
            </value>
            <value>
                <fullName>TT210</fullName>
            </value>
            <value>
                <fullName>GlobalTRACS</fullName>
            </value>
            <value>
                <fullName>IVG</fullName>
            </value>
            <value>
                <fullName>TT150</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>