force-app/main/default/objects/NMC_Account__c/fields/Hub_ID__c.field-meta.xml
<CustomField>
    <fullName>Hub_ID__c</fullName>
    <description>Used to determine which NMC is being referenced for this account.</description>
    <label>Hub ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1 - US</label>
            </value>
            <value>
                <fullName>81</fullName>
                <label>81 - Canada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>