force-app/main/default/objects/NMC_Account__c/fields/NMC_Account__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account__c</fullName>
    <description>NMC Account #</description>
    <label>NMC Account #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>