force-app/main/default/objects/NMC_Account__c/fields/NMC_Account_and_HubID__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account_and_HubID__c</fullName>
    <formula>NMC_Account__c  &amp;   SelectedHubID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NMCAccountandHubID</label>
    <type>Text</type>
</CustomField>