force-app/main/default/objects/NMC_Account__c/fields/NMC_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account_Name__c</fullName>
    <label>NMC Account Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>