force-app/main/default/objects/NMC_Account__c/fields/NMC_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account_Type__c</fullName>
    <label>NMC Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BluMASS</fullName>
            </value>
            <value>
                <fullName>Eval</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>QMASS</fullName>
            </value>
            <value>
                <fullName>Sub Account</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>