force-app/main/default/objects/NMC_Account__c/fields/NMC_Aux_ID__c.field-meta.xml
<CustomField>
    <fullName>NMC_Aux_ID__c</fullName>
    <description>Aux ID</description>
    <label>NMC Aux ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>