force-app/main/default/objects/NMC_Account__c/fields/NMC_Units__c.field-meta.xml
<CustomField>
    <fullName>NMC_Units__c</fullName>
    <label>NMC Units #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>