force-app/main/default/objects/NMC_Account__c/fields/NMCAccountandHubID_text__c.field-meta.xml
<CustomField>
    <fullName>NMCAccountandHubID_text__c</fullName>
    <externalId>true</externalId>
    <label>NMCAccountandHubID_text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>