force-app/main/default/objects/NMC_Account__c/fields/Retention_Period__c.field-meta.xml
<CustomField>
    <fullName>Retention_Period__c</fullName>
    <label>Retention Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 days</fullName>
            </value>
            <value>
                <fullName>7 days</fullName>
            </value>
            <value>
                <fullName>14 days</fullName>
            </value>
            <value>
                <fullName>90 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>