force-app/main/default/objects/NMC_Account__c/fields/SelectedHubID__c.field-meta.xml
<CustomField>
    <fullName>SelectedHubID__c</fullName>
    <formula>TEXT(Hub_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SelectedHubID</label>
    <type>Text</type>
</CustomField>