force-app/main/default/objects/NMC_Account__c/fields/Siebel_NMC_ID__c.field-meta.xml
<CustomField>
    <fullName>Siebel_NMC_ID__c</fullName>
    <label>Siebel_NMC_ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>