force-app/main/default/objects/NMC_Account__c/validationRules/NMC_Account_Name_cannot_change.validationRule-meta.xml
<ValidationRule>
    <fullName>NMC_Account_Name_cannot_change</fullName>
    <active>true</active>
    <description>The NMC Account Name cannot be changed except by the QES Interface profile.</description>
    <errorConditionFormula>AND(ISCHANGED( Name ),  $Profile.Name &lt;&gt; &apos;Interface User&apos;)</errorConditionFormula>
    <errorMessage>NMC Account Name / Number cannot be modified. Please press Cancel to cancel your changes.</errorMessage>
</ValidationRule>