force-app/main/default/objects/NMC_Account__c/listViews/AllInactiveNMCAccounts.listView-meta.xml
<ListView>
    <fullName>AllInactiveNMCAccounts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>NMC_Account_Type__c</columns>
    <columns>NMC_System__c</columns>
    <columns>NMC_Units__c</columns>
    <columns>Customer_Interface__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Inactive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Inactive NMC Accounts</label>
</ListView>