force-app/main/default/objects/NMC_Account__c/listViews/AllNMCAccounts.listView-meta.xml
<ListView>
    <fullName>AllNMCAccounts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>NMC_Account_Type__c</columns>
    <columns>NMC_System__c</columns>
    <columns>NMC_Units__c</columns>
    <columns>Customer_Interface__c</columns>
    <columns>Inactive__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All NMC Accounts</label>
    <language>en_US</language>
</ListView>