force-app/main/default/objects/NMC_Account__c/listViews/NMCAccountsCreatedLast7Days.listView-meta.xml
<ListView>
    <fullName>NMCAccountsCreatedLast7Days</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>NMC_Account_Type__c</columns>
    <columns>NMC_System__c</columns>
    <columns>NMC_Units__c</columns>
    <columns>Customer_Interface__c</columns>
    <columns>Inactive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>NMC Accounts Created Last 7 Days</label>
    <language>en_US</language>
</ListView>